# himalaya-tui

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  default.nix  deny.toml  package.nix
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  mime.rs  theme.rs
src/app/: compose.rs  dialog.rs  envelopes.rs  keybinds.rs  mailboxes.rs  mod.rs  panel.rs  reader.rs  state.rs  status.rs
src/imap/: mod.rs  util.rs
src/imap/envelope/: list.rs
src/imap/flag/: add.rs  remove.rs
src/imap/mailbox/: list.rs
src/imap/message/: copy.rs  delete.rs  get.rs  get_raw.rs  move.rs  save.rs
src/jmap/: mod.rs
src/jmap/envelope/: list.rs
src/jmap/flag/: update.rs
src/jmap/mailbox/: list.rs
src/jmap/message/: copy.rs  delete.rs  get.rs  get_raw.rs  move.rs  save.rs  send.rs
src/runtime/: events.rs  handlers.rs  mod.rs  startup.rs
src/smtp/message/: send.rs
src/themes/: default.rs  dracula_dark.rs  mod.rs  one_light.rs
src/tui/: app.rs  model.rs  update.rs
src/ui/: compose.rs  dialog.rs  envelopes.rs  header.rs  layout.rs  mailboxes.rs  message.rs  mod.rs  status.rs
src/wizard/: autoconfig.rs  discover.rs  mod.rs  pacc.rs  srv.rs
