[package]
name = "himalaya-tui"
description = "TUI to manage emails"
version = "0.1.0"
authors = ["Clement DOUIN <pimalaya.org@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "email"]
keywords = ["tui", "email", "imap", "ratatui"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/himalaya-tui"
repository = "https://github.com/pimalaya/himalaya-tui"

[package.metadata.docs.rs]
features = ["imap"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "smtp", "jmap", "rustls-ring"]
imap = ["dep:io-imap", "io-imap/client"]
smtp = ["dep:io-smtp", "io-smtp/client"]
jmap = ["dep:io-jmap", "dep:base64", "io-jmap/client"]
native-tls = ["pimalaya-stream/native-tls", "io-imap?/native-tls", "io-jmap?/native-tls", "io-smtp?/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "io-imap?/rustls-aws", "io-jmap?/rustls-aws", "io-smtp?/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "io-imap?/rustls-ring", "io-jmap?/rustls-ring", "io-smtp?/rustls-ring"]
vendored = ["pimalaya-stream/vendored"]

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false }
edtui = { version = "0.11", features = ["system-editor"] }
html2text = "0.12"
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
mail-parser = "0.9"
mml = "1"
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.0.1", default-features = false, features = ["std"] }
ratatui = "0.30"
rfc2047-decoder = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
simplelog = "0.12"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.19", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"

[patch.crates-io]
io-http.git = "https://github.com/pimalaya/io-http"
io-imap.git = "https://github.com/pimalaya/io-imap"
io-jmap.git = "https://github.com/pimalaya/io-jmap"
io-smtp.git = "https://github.com/pimalaya/io-smtp"
mml.git = "https://github.com/pimalaya/mml"
pimalaya-cli.git = "https://github.com/pimalaya/cli"
pimalaya-config.git = "https://github.com/pimalaya/config"
pimalaya-stream.git = "https://github.com/pimalaya/stream"
