[package]
name = "himalaya-tui"
description = "TUI to manage emails"
version = "0.0.1"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.88"
edition = "2024"
license = "AGPL-3.0-only"
categories = ["command-line-utilities", "email"]
keywords = ["tui", "email", "imap", "ratatui"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/himalaya-tui"
repository = "https://github.com/pimalaya/himalaya-tui"

[package.metadata.docs.rs]
features = ["imap"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "smtp", "jmap", "m2dir", "rustls-ring"]
imap = ["dep:io-imap", "io-imap/client", "io-email/imap", "pimalaya-cli/imap"]
smtp = ["dep:io-smtp", "io-smtp/client", "io-email/smtp", "pimalaya-cli/smtp"]
jmap = ["dep:io-jmap", "dep:base64", "io-jmap/client", "io-email/jmap", "pimalaya-cli/jmap"]
maildir = ["dep:io-maildir", "io-maildir/client", "io-email/maildir"]
m2dir = ["dep:io-m2dir", "io-m2dir/client", "io-email/m2dir"]
native-tls = ["pimalaya-stream/native-tls", "io-discovery/native-tls", "io-imap?/native-tls", "io-jmap?/native-tls", "io-smtp?/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "io-discovery/rustls-aws", "io-imap?/rustls-aws", "io-jmap?/rustls-aws", "io-smtp?/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "io-discovery/rustls-ring", "io-imap?/rustls-ring", "io-jmap?/rustls-ring", "io-smtp?/rustls-ring"]
vendored = ["pimalaya-stream/vendored"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
edtui = { version = "0.11", features = ["system-editor"] }
html2text = "0.17"
io-discovery = { version = "0.0.1", default-features = false, features = ["pacc", "autoconfig", "rfc6186", "client"] }
io-email = { version = "0.0.1", default-features = false, features = ["client"] }
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-m2dir = { version = "0.0.1", default-features = false, optional = true }
io-maildir = { version = "0.0.1", default-features = false, optional = true }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
mail-parser = "0.11"
mml = { version = "1", default-features = false, features = ["compiler", "interpreter"] }
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["prompt", "wizard", "spinner", "terminal"] }
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.0.1", default-features = false, features = ["std"] }
ratatui = { version = "0.30", features = ["serde"] }
rfc2047-decoder = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
simplelog = "0.12"
toml = "0.8"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.19", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"

[patch.crates-io]
domain = { git = "https://github.com/soywod/domain", branch = "new-srv" }
io-discovery.git = "https://github.com/pimalaya/io-discovery"
io-email.git = "https://github.com/pimalaya/io-email"
io-http.git = "https://github.com/pimalaya/io-http"
io-imap.git = "https://github.com/pimalaya/io-imap"
io-jmap.git = "https://github.com/pimalaya/io-jmap"
io-m2dir.git = "https://github.com/pimalaya/io-m2dir"
io-maildir.git = "https://github.com/pimalaya/io-maildir"
io-smtp.git = "https://github.com/pimalaya/io-smtp"
mml.git = "https://github.com/pimalaya/mml"
pimalaya-cli.git = "https://github.com/pimalaya/cli"
pimalaya-config.git = "https://github.com/pimalaya/config"
pimalaya-stream.git = "https://github.com/pimalaya/stream"
