[package]
name = "himalaya-tui"
description = "TUI to manage emails"
version = "0.1.0"
authors = ["soywod <pimalaya.org@posteo.net>"]
rust-version = "1.88"
edition = "2024"
license = "AGPL-3.0-only"
categories = ["command-line-utilities", "email"]
keywords = ["tui", "email", "imap", "ratatui", "jmap"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/himalaya-tui"
repository = "https://github.com/pimalaya/himalaya-tui"

[package.metadata.docs.rs]
features = ["imap"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls-ring", "imap", "smtp", "jmap", "maildir", "m2dir"]
imap = ["dep:io-imap", "io-imap/client", "io-email/imap", "pimalaya-cli/imap"]
smtp = ["dep:io-smtp", "io-smtp/client", "io-email/smtp", "pimalaya-cli/smtp"]
jmap = ["dep:io-jmap", "dep:base64", "io-jmap/client", "io-email/jmap", "pimalaya-cli/jmap"]
maildir = ["dep:io-maildir", "io-maildir/client", "io-email/maildir"]
m2dir = ["dep:io-m2dir", "io-m2dir/client", "io-email/m2dir"]
native-tls = ["pimalaya-stream/native-tls", "pimconf/native-tls", "io-email/native-tls", "io-imap?/native-tls", "io-jmap?/native-tls", "io-smtp?/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "pimconf/rustls-aws", "io-email/rustls-aws", "io-imap?/rustls-aws", "io-jmap?/rustls-aws", "io-smtp?/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "pimconf/rustls-ring", "io-email/rustls-ring", "io-imap?/rustls-ring", "io-jmap?/rustls-ring", "io-smtp?/rustls-ring"]
vendored = ["pimalaya-stream/vendored"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
edtui = { version = "0.11", features = ["system-editor"] }
html2text = "0.17"
io-email = { version = "0.0.1", default-features = false, features = ["client"] }
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-m2dir = { version = "0.0.1", default-features = false, optional = true }
io-maildir = { version = "0.0.1", default-features = false, optional = true }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
mail-parser = "0.11"
mime-meta-language = { version = "1", default-features = false, features = ["compiler", "interpreter"] }
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["prompt", "wizard", "spinner", "terminal"] }
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.0.1", default-features = false, features = ["std"] }
pimconf = { version = "0.1.0", default-features = false, features = ["pacc", "autoconfig", "rfc6186", "client"] }
ratatui = { version = "0.30", features = ["serde"] }
rfc2047-decoder = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
simplelog = "0.12"
toml = "0.8"
url = { version = "2.2", features = ["serde"] }
uuid = { version = "1.19", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"

# [patch.crates-io]
# domain = { git = "https://github.com/soywod/domain", branch = "new-srv" }
# io-email.path = "../io-email"
# io-http.path = "../io-http"
# io-imap.path = "../io-imap"
# io-jmap.path = "../io-jmap"
# io-m2dir.path = "../io-m2dir"
# io-maildir.path = "../io-maildir"
# io-smtp.path = "../io-smtp"
# mime-meta-language.path = "../mml"
# pimalaya-cli.path = "../cli"
# pimalaya-config.path = "../config"
# pimalaya-stream.path = "../stream"
# pimconf.path = "../pimconf"

[patch.crates-io]
domain = { git = "https://github.com/soywod/domain", branch = "new-srv" }
imap-codec.git = "https://github.com/soywod/imap-codec"
io-email.git = "https://github.com/pimalaya/io-email"
io-http.git = "https://github.com/pimalaya/io-http"
io-imap.git = "https://github.com/pimalaya/io-imap"
io-jmap.git = "https://github.com/pimalaya/io-jmap"
io-m2dir.git = "https://github.com/pimalaya/io-m2dir"
io-maildir.git = "https://github.com/pimalaya/io-maildir"
io-smtp.git = "https://github.com/pimalaya/io-smtp"
mime-meta-language.git = "https://github.com/pimalaya/mml"
pimalaya-cli.git = "https://github.com/pimalaya/cli"
pimalaya-config.git = "https://github.com/pimalaya/config"
pimalaya-stream.git = "https://github.com/pimalaya/stream"
pimconf.git = "https://github.com/pimalaya/pimconf"
